--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>domitoryy's files</title>
+</head>
 <body>
 <h1>Links and Files</h1>
+<h2>domitoryy's files</h2>
 <p>https://domitoryy.github.io/</p>
 <p>https://t.me/domitoryyii</p>
 <p>https://www.twitch.tv/domitoryy/</p>
