--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>domitoryy's files</title>
+<title>domitoryy's links</title>
 </head>
 <body>
-<h1>Links and Files</h1>
-<h2>domitoryy's files</h2>
+<h1>Links ✨</h1>
+<h2>domitoryy's links</h2>
 <p>https://domitoryy.github.io/</p>
 <p>https://t.me/domitoryyii</p>
 <p>https://www.twitch.tv/domitoryy/</p>
