--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 <h1>Links ✨</h1>
+<img src="https://raw.githubusercontent.com/domitoryy/domitoryy.github.io/refs/heads/main/dog.jpg">
 <h2>domitoryy's links</h2>
 <p>https://domitoryy.github.io/</p>
 <p>https://t.me/domitoryyii</p>
