--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
 <h1>Links ✨</h1>
 <img src="https://raw.githubusercontent.com/domitoryy/domitoryy.github.io/refs/heads/main/dog.jpg">
 <h2>domitoryy's links</h2>
-<p>https://domitoryy.github.io/</p>
 <p>https://t.me/domitoryyii</p>
 <p>https://www.twitch.tv/domitoryy/</p>
-<p>https://www.donationalerts.com/r/domitoryy</p>
+<p>часики можно купить тут (за донат в 100р): https://www.donationalerts.com/r/domitoryy</p>
 </body>
 </html>
